# Solana-Jupiter-Price-Monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: config-1.json  config-2.json  config-run.json
docs/: commands.txt  instructions.txt
src/: app_context.rs  audio_assets.rs  audio_manager.rs  config.rs  config_run.rs  dump.rs  generic_mod.rs  gui.rs  logger.rs  main.rs  menu_mod.rs  monitor_mod.rs  monitor_state.rs  notification_mod.rs  options.rs  sound_mod.rs  spinner.rs  tokens.rs  view_type.rs
tokens/: tokens.json
