[package]
name = "solana_jupiter_price_monitor"
version = "6.0.0"
edition = "2021"

authors = ["App In Hand <info@appinhand.it>"]
description = "Un alert sui prezzi di Jup.ag da terminale."
homepage = "www.appinhand.it"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
release_date = "29/01/2026"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0"
headless_chrome = "1.0"
crossterm = "0.26"
rodio = "0.17"
chrono = "0.4"
colored = "2.0"
num-traits = "0.2"
crossbeam-channel = "0.5.15"
once_cell = "1.21.3"
anyhow    = "1.0"
